<resources>
    <string name="app_name">Loja Virtual</string>
    <string name="enter_store_btn">Entrar na loja</string>
    <string name="welcome_text_view">Bem vindo!\nVamos as compras?</string>
    <string name="product_name_text_view">Nome do Produto</string>
    <string name="price_text_view">Preço</string>
    <string name="seller_text_view">Vendedor</string>
    <string name="total_value_text_view">$ 1,0000.23</string>
    <string name="pay_button">Pagar</string>
    <string name="total_text_view">Total:</string>
    <string name="credit_card_placeholder_edit_text">4111 1111 1111 1111</string>
    <string name="cc_name_text_view">Nome no Cartão</string>
    <string name="cc_placeholder_edit_text">João da Silva</string>
    <string name="cc_number_text_view">Número do Cartão</string>
    <string name="cvv_text_view">CVV</string>
    <string name="cvv_placeholder_edit_text">123</string>
    <string name="date_separator">/</string>
    <string name="cc_expire_date_text_view">Data do Vencimento</string>
    <string name="month_hint">12</string>
    <string name="year_hint">21</string>
    <string name="valor_total">Valor Total:</string>
    <string name="valor_em_cash">$ 1.000,00</string>
    <string name="buy_button">Comprar</string>
    <string name="list_transactions">Listar Transações</string>
    <string name="add_cart_items_text_view">Adicione itens no carrinho!</string>
</resources>
