<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.victo.virtualstore.Activity.PagamentoActivity">


    <Button
        android:id="@+id/btComprar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_weight="0.28"
        android:text="@string/buy_button"
        android:backgroundTint="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btListar"
        tools:targetApi="lollipop" />

    <TextView
        android:id="@+id/totalTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/cc_name_text_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="8dp" />

    <EditText
        android:id="@+id/etNome"
        android:layout_width="0dp"
        android:layout_height="42dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:digits="QWERTYUIOPASDFGHJKLÇZXCVBNMqwertyuiopasdfghjklzxcvbnm "
        android:ems="10"
        android:hint="@string/cc_placeholder_edit_text"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/totalTextView" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/cc_number_text_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNome"
        android:layout_marginLeft="8dp" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/cc_expire_date_text_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/creditCardEditText"
        android:layout_marginLeft="8dp" />

    <EditText
        android:id="@+id/etMes"
        android:layout_width="40dp"
        android:layout_height="42dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:hint="@string/month_hint"
        android:inputType="number"
        android:maxLength="2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9"
        android:layout_marginLeft="8dp" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="14dp"
        android:layout_height="42dp"
        android:layout_marginLeft="0dp"
        android:text="@string/date_separator"
        android:textSize="25sp"
        app:layout_constraintLeft_toRightOf="@+id/etMes"
        app:layout_constraintTop_toBottomOf="@+id/textView9"
        android:layout_marginStart="0dp" />

    <EditText
        android:id="@+id/etAno"
        android:layout_width="40dp"
        android:layout_height="42dp"
        android:ems="10"
        android:hint="@string/year_hint"
        android:inputType="number"
        android:maxLength="2"
        app:layout_constraintLeft_toRightOf="@+id/textView10"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/cvv_text_view"
        app:layout_constraintStart_toEndOf="@+id/creditCardEditText"
        app:layout_constraintTop_toBottomOf="@+id/etNome"
        android:layout_marginLeft="8dp" />

    <EditText
        android:id="@+id/etCvv"
        android:layout_width="73dp"
        android:layout_height="42dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/cvv_placeholder_edit_text"
        android:maxLength="3"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11"
        android:layout_marginRight="8dp" />



    <EditText
        android:id="@+id/creditCardEditText"
        android:layout_width="0dp"
        android:layout_height="42dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="0dp"
        android:ems="10"
        android:hint="@string/credit_card_placeholder_edit_text"
        android:inputType="number"
        android:maxLength="16"
        app:layout_constraintEnd_toStartOf="@+id/etCvv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="30dp"
        android:text="@string/valor_total"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10"
        android:layout_marginLeft="8dp" />

    <TextView
        android:id="@+id/tvTotal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="30dp"
        android:text="@string/valor_em_cash"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView12"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

</android.support.constraint.ConstraintLayout>
